--- a/css/main.css
+++ b/css/main.css
@@ -796,7 +796,7 @@ footer {
 
 .footer-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
   align-items: flex-start;
   padding-left: 3rem;
   padding-right: 3rem;
@@ -806,20 +806,25 @@ footer {
 
 .footer-section {
   flex: 1;
-  margin: 0 1rem;
+  margin: 0 5rem;
   text-align: left;
   flex-grow: 1;
 }
 
 .footer-section h3 {
   margin-bottom: 1rem;
+  letter-spacing: 0.08em;
 }
 
 .footer-section p {
   line-height: 1.6;
 }
 
-.footer-section ul {
+.information p{
+  line-height: 2.5;
+}
+
+/* .footer-section ul {
   list-style: none;
   padding: 0;
 }
@@ -827,7 +832,7 @@ footer {
 .footer-section ul li {
   margin: 0.5rem 0;
 }
-
+ */
 .footer-section a {
   color: white;
   text-decoration: none;
@@ -842,10 +847,14 @@ footer {
   max-width: 25%;
 }
 
-#footer-links {
-  margin-left: 20%;
+#footer-map {
+  max-width: 30%;
 }
 
+/* #footer-links {
+  margin-left: 20%;
+}
+ */
 .map-container {
   display: flex;
   justify-content: center;
@@ -1014,8 +1023,34 @@ footer {
   .podologia-img {
     display: none;
   }
-}
 
+}
+@media (min-width: 970px) and (max-width: 1148px) {
+ 
+  #footer-map {
+    margin-left: 0rem;
+    width: 80%;
+    max-width: 100%;
+  }
+  .footer-container {
+    flex-direction: column;
+    align-items: left;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  #footer-service {
+    max-width: 100%;
+    margin: 0rem;
+    margin-bottom: 2rem;
+  }
+
+  #footer-map iframe {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    border: none;
+  }
+}
 /* tablet */
 @media (min-width: 611px) and (max-width: 969px) {
   .logo {
@@ -1155,11 +1190,21 @@ footer {
     max-width: 150px;
   }
 
+/*   #footer-links {
+    margin-left: 0rem;
+    width: 100%;
+  } */
+
+  #footer-map {
+    margin-left: 0rem;
+    width: 80%;
+    max-width: 100%;
+  }
   .footer-container {
     flex-direction: column;
-    align-items: center;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    align-items: left;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .footer-section {
@@ -1172,17 +1217,14 @@ footer {
   #footer-service {
     max-width: 100%;
     margin: 0rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
 
-  #footer-links {
-    margin-left: 0rem;
+  #footer-map iframe {
     width: 100%;
-  }
-
-  #footer-map {
-    margin-left: 0rem;
-    width: 100%;
+    height: auto;
+    max-width: 100%;
+    border: none;
   }
 }
 
@@ -1363,7 +1405,7 @@ footer {
   }
 
   .description-text {
-    padding: 0.5rem;
+    padding: 0.8rem;
     margin: 0;
     align-items: center;
     justify-content: center;
@@ -1466,7 +1508,7 @@ footer {
   #footer-service {
     max-width: 100%;
     margin: 0rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
 
   #footer-links {
