--- a/css/main.css
+++ b/css/main.css
@@ -794,21 +794,21 @@ footer {
   padding-right: 2rem;
 }
 
-.footer-container {
+ .footer-container {
   display: flex;
-  justify-content: start;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   padding-left: 3rem;
   padding-right: 3rem;
   background-color: var(--primary-color);
   font-size: 0.9rem;
+  gap: 0.1rem; 
 }
 
 .footer-section {
   flex: 1;
-  margin: 0 5rem;
+  margin: 0 1rem;
   text-align: left;
-  flex-grow: 1;
 }
 
 .footer-section h3 {
@@ -820,19 +820,16 @@ footer {
   line-height: 1.6;
 }
 
-.information p{
+#information p {
   line-height: 2.5;
 }
 
-/* .footer-section ul {
-  list-style: none;
-  padding: 0;
+#information {
+  margin: 0; 
+  margin-top: 0; 
+  max-width: 30%;
 }
 
-.footer-section ul li {
-  margin: 0.5rem 0;
-}
- */
 .footer-section a {
   color: white;
   text-decoration: none;
@@ -848,13 +845,10 @@ footer {
 }
 
 #footer-map {
-  max-width: 30%;
+  margin: 0; 
+  max-width: 20%;
 }
 
-/* #footer-links {
-  margin-left: 20%;
-}
- */
 .map-container {
   display: flex;
   justify-content: center;
@@ -890,6 +884,7 @@ footer {
   #especialitats {
     max-width: 80%;
   }
+
 }
 
 @media (min-width: 1280px) and (max-width: 1440px) {
@@ -1023,27 +1018,43 @@ footer {
   .podologia-img {
     display: none;
   }
-
+  #footer-map {
+    max-width: 30%;
+  }
 }
+
 @media (min-width: 970px) and (max-width: 1148px) {
- 
+
   #footer-map {
     margin-left: 0rem;
     width: 80%;
     max-width: 100%;
   }
+
   .footer-container {
     flex-direction: column;
-    align-items: left;
+    align-items:  flex-start;
     padding-left: 1rem;
     padding-right: 1rem;
+    gap: 2rem;
+    padding: 1rem;
   }
+
   #footer-service {
     max-width: 100%;
     margin: 0rem;
     margin-bottom: 2rem;
   }
 
+  #information {
+    width: 100%;
+    max-width: 100%;
+  }
+  .map-container {
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+  }
   #footer-map iframe {
     width: 100%;
     height: auto;
@@ -1051,6 +1062,7 @@ footer {
     border: none;
   }
 }
+
 /* tablet */
 @media (min-width: 611px) and (max-width: 969px) {
   .logo {
@@ -1159,7 +1171,6 @@ footer {
     margin-top: 1.5rem;
   }
 
-
   #mutues {
     padding: 1rem;
     border-radius: 0.625rem;
@@ -1195,11 +1206,14 @@ footer {
     width: 80%;
     max-width: 100%;
   }
+
   .footer-container {
     flex-direction: column;
-    align-items: left;
+    align-items:  flex-start;
     padding-left: 1rem;
     padding-right: 1rem;
+    gap: 2rem;
+    padding: 1rem; 
   }
 
   .footer-section {
@@ -1220,6 +1234,12 @@ footer {
     height: auto;
     max-width: 100%;
     border: none;
+  }
+
+  #information {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 1rem;
   }
 }
 
@@ -1456,7 +1476,6 @@ footer {
     margin-top: 1.5rem;
   }
 
-
   #mutues {
     padding: 1rem;
     border-radius: 0.625rem;
@@ -1489,9 +1508,11 @@ footer {
 
   .footer-container {
     flex-direction: column;
-    align-items: left;
+    align-items:  flex-start;
     padding-left: 1rem;
     padding-right: 1rem;
+    gap: 2rem; 
+    padding: 1rem; 
   }
 
   .footer-section {
@@ -1522,6 +1543,12 @@ footer {
     height: auto;
     max-width: 100%;
     border: none;
+  }
+
+  #information {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 1rem;
   }
 }
 
@@ -1554,5 +1581,20 @@ footer {
 
   .description-container {
     width: 120%;
+  }
+
+  .footer-container {
+    flex-direction: column;
+    align-items:  flex-start;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    gap: 2rem; 
+    padding: 1rem; 
+  }
+
+  #information {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 0rem;
   }
 }
