actualiza imagen hero

--- a/css/main.css
+++ b/css/main.css
@@ -1320,7 +1320,7 @@ footer {
     width: 120%;
     max-width: 40.625rem;
     height: 120%;
-    background-image: url('cadira.webp');
+    background-image: url('cadira2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
